2016-01-14  Charlie Zender  <zender@uci.edu>

	* Explicitly include <math.h> for all files that use isfinite(), isinf(), isnan()

	* NCO 4.5.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.5-alpha02 final changes';git push
	git tag -a 4.5.5-alpha02 -m 'Version 4.5.5-alpha02 new features: Support CDF5';git push --tags

	* CDF5 work: deprecate NC_FORMAT_64BIT for NC_FORMAT_64BIT_OFFSET, expose NC_FORMAT_64BIT_DATA, update docs for -5, --5, --fl_fmt="64_bit_data"

	* Deprecate pre-branch-cut methods

	* NCO 4.5.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.5-alpha01 final changes';git push
	git tag -a 4.5.5-alpha01 -m 'Version 4.5.5-alpha01 new features: branch-cut patch to infer curvilinear grids';git push --tags

	* Implement full branch-cut patch in nco_grd_nfr(), keeps curvilinear grids from generating concave gridcells
	in 3/4 of Feng's five-failure parade, and causes 2/4 of those to work "perfectly". Remaining two have other bugs in conserve mode.

2016-01-13  Charlie Zender  <zender@uci.edu>

	* Account for branch-cuts in extrapolating longitude from template

	* Implement kludge for AMSR mask variable

	* Add new lat,lon,col dimension and coordinate names for TRMM, GPM, AMSR, OCO2:
	sounding_id,Latitude,Longitude,nscan,npix,npixel,S1_Latitude,S1_Longitude

2016-01-08  Henry Butowsky  <henryb@hush.com>

	* ncap2 ncap_stats_wvariance(var,weight) set mss_val in weight to missing values in var

2016-01-07  Charlie Zender  <zender@uci.edu>

	* Fix typos caught by Debian lint from Bas Couwenberg

	* NCO 4.5.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4 final changes';git push
	git tag -a 4.5.4 -m 'Version 4.5.4 new features: ncremap fix ncpdq nfr cap, XML _Unsigned, crv dateline, GSL2';git push --tags

2016-01-04  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2016

2016-01-04  Henry Butowsky  <henryb@hush.com>

	* Add sum() as synonym for total() in ncap2 aggregate methods
